Work in progress

--- a/core/admin/templates/edit.html
+++ b/core/admin/templates/edit.html
@@ -7,7 +7,8 @@
 	<hr>
 	Меню со ссылками <a href="/">Главная</a> | <a href="/admin/login">Вход в админку</a>
 	<hr>
- 
-
+	<form class="row g-3">
+	<?= $ehtml ?>
+	</form> 
 	<hr>
 </div>
