--- a/core/admin/templates/edit.html
+++ b/core/admin/templates/edit.html
@@ -1,7 +1,7 @@
 #LAYOUT /admin/templates/main.html
 
 <form>
-<h1 class="caption_header"><button type="submit" class="btn btn-primary">Сохранить</button>
+<h1 class="caption_header"><button type="submit" class="btn btn-primary js-admin-save">Сохранить</button>
 <button type="button" class="btn btn-secondary">Отменить</button>Редактирование объекта</h1>
 <div class="white-container" style="margin-top:40px;min-height:80vh;margin-bottom:40px;">
 
@@ -12,7 +12,7 @@
 </div>
 
 <div class="buttons_footer">
-<button type="submit" class="btn btn-primary">Сохранить</button>
+<button type="submit" class="btn btn-primary js-admin-save">Сохранить</button>
 <button type="button" class="btn btn-secondary">Отменить</button>
 </div>
 </form>
