--- a/core/admin/templates/edit.html
+++ b/core/admin/templates/edit.html
@@ -1,4 +1,4 @@
-#LAYOUT /admin/templates/main.html
+#LAYOUT main.html
 
 <form>
 	<h1 class="caption_header"><button type="submit" class="btn btn-primary js-admin-save">Сохранить</button>
